--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,27 @@
-# .gitignore 파일 내용
-.env
+# Python 관련 파일
 __pycache__/
 *.pyc
+*.pyo
+
+# 환경 변수 파일
+.env
+
+# Vercel 관련 파일
+.vercel/
+
+# 가상 환경
+venv/
 myenv/
+
+# 운영 체제 관련 파일
+.DS_Store
+Thumbs.db
+
+# 로그 파일
+*.log
+
+# IDE 및 편집기 관련 파일
+.vscode/
+.idea/
+*.sublime-project
+*.sublime-workspace
