캡쳐 기능 추가

--- a/vercel.json
+++ b/vercel.json
@@ -20,8 +20,8 @@
       "dest": "app.py"
     },
     {
-      "src": "/api/cors-handler",
-      "dest": "api/cors-handler.js"
+      "src": "/api/proxy",
+      "dest": "/api/proxy.js"
     }
   ]
 }
