--- a/vercel.json
+++ b/vercel.json
@@ -23,5 +23,10 @@
       "src": "/api/proxy",
       "dest": "/api/proxy.js"
     }
-  ]
+  ],
+  "functions": {
+    "app.py": {
+      "maxDuration": 30
+    }
+  }
 }
