--- a/vercel.json
+++ b/vercel.json
@@ -7,7 +7,10 @@
     },
     {
       "src": "api/app.py",
-      "use": "@vercel/python"
+      "use": "@vercel/python",
+      "config": {
+        "maxDuration": 300
+      }
     }
   ],
   "routes": [
@@ -23,10 +26,5 @@
       "src": "/api/proxy",
       "dest": "/api/proxy.js"
     }
-  ],
-  "functions": {
-    "api/app.py": {
-      "maxDuration": 300
-    }
-  }
+  ]
 }
