--- a/vercel.json
+++ b/vercel.json
@@ -8,7 +8,9 @@
     {
       "src": "app.py",
       "use": "@vercel/python",
-      "maxDuration": 60
+      "config": {
+        "maxDuration": 300
+      }
     }
   ],
   "routes": [
