--- a/vercel.json
+++ b/vercel.json
@@ -2,10 +2,10 @@
   "version": 2,
   "builds": [
     {
-      "src": "api/app.py",
+      "src": "app.py",
       "use": "@vercel/python",
       "config": {
-        "maxDuration": 120
+        "maxDuration": 60
       }
     }
   ],
