--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "version": 2,
   "builds": [
     {
-      "src": "api/app.py",
+      "src": "app.py",
       "use": "@vercel/python",
       "config": {
         "maxDuration": 60
@@ -12,7 +12,7 @@
   "routes": [
     {
       "src": "/api/(.*)",
-      "dest": "api/app.py"
+      "dest": "api/ai_utils.py"
     },
     {
       "src": "/(.*)",
