--- a/vercel.json
+++ b/vercel.json
@@ -12,11 +12,11 @@
   "routes": [
     {
       "src": "/api/(.*)",
-      "dest": "api/ai_utils.py"
+      "dest": "app.py"
     },
     {
       "src": "/(.*)",
-      "dest": "api/app.py"
+      "dest": "app.py"
     }
   ]
 }
