--- a/vercel.json
+++ b/vercel.json
@@ -19,6 +19,10 @@
       "dest": "app.py"
     },
     {
+      "src": "/static/(.*)",
+      "dest": "/static/$1"
+    },
+    {
       "src": "/(.*)",
       "dest": "app.py"
     }
